--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,168 @@ modepth_outputs/SRR7961356_GSM3415915_E3_rep3_Homo_sapiens_RNA-Seq_Aligned.out.r
 modepth_outputs/SRR7961357_GSM3415916_16_5_rep1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 modepth_outputs/SRR7961358_GSM3415917_16_5_rep2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 modepth_outputs/SRR7961359_GSM3415918_16_5_rep3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961195_GSM3415754_K_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961196_GSM3415755_K_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961197_GSM3415756_K_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961198_GSM3415757_K_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961199_GSM3415758_K_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961200_GSM3415759_K_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961201_GSM3415760_C_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961202_GSM3415761_C_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961203_GSM3415762_C_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961204_GSM3415763_C_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961205_GSM3415764_C_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961206_GSM3415765_C_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961207_GSM3415766_Li_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961208_GSM3415767_Li_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961209_GSM3415768_Li_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961210_GSM3415769_Li_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961211_GSM3415770_Li_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961212_GSM3415771_Li_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961213_GSM3415772_B_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961214_GSM3415773_B_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961215_GSM3415774_B_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961216_GSM3415775_B_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961217_GSM3415776_B_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961218_GSM3415777_B_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961219_GSM3415778_Lu_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961220_GSM3415779_Lu_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961221_GSM3415780_Lu_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961222_GSM3415781_Lu_7_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961223_GSM3415782_Lu_8_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961224_GSM3415783_Cer_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961225_GSM3415784_Cer_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961226_GSM3415785_O_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961227_GSM3415786_O_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961228_GSM3415787_P_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961229_GSM3415788_P_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961230_GSM3415789_P_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961231_GSM3415790_E_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961232_GSM3415791_E_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961233_GSM3415792_E_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961234_GSM3415793_E_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961235_GSM3415794_E_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961236_GSM3415795_E_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961237_GSM3415796_S_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961238_GSM3415797_S_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961239_GSM3415798_S_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961240_GSM3415799_S_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961241_GSM3415800_S_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961242_GSM3415801_S_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961243_GSM3415802_MN_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961244_GSM3415803_MN_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961245_GSM3415804_MN_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961246_GSM3415805_1_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961247_GSM3415806_1_11_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961248_GSM3415807_1_12_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961249_GSM3415808_1_13_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961250_GSM3415809_1_14_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961251_GSM3415810_1_17_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961252_GSM3415811_1_19_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961253_GSM3415812_1_20_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961254_GSM3415813_2_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961255_GSM3415814_2_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961256_GSM3415815_2_11_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961257_GSM3415816_2_12_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961258_GSM3415817_2_13_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961259_GSM3415818_2_17_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961260_GSM3415819_2_19_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961261_GSM3415820_2_20_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961262_GSM3415821_3_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961263_GSM3415822_3_11_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961264_GSM3415823_3_12_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961265_GSM3415824_3_13_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961266_GSM3415825_3_14_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961267_GSM3415826_3_16_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961268_GSM3415827_3_17_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961269_GSM3415828_3_19_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961270_GSM3415829_3_20_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961271_GSM3415830_4_16_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961272_GSM3415831_4_17_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961273_GSM3415832_4_14_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961274_GSM3415833_4_12_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961275_GSM3415834_4_13_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961276_GSM3415835_5_16_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961277_GSM3415836_6_16_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961278_GSM3415837_8_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961279_GSM3415838_8_19_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961280_GSM3415839_8_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961281_GSM3415840_8_18_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961282_GSM3415841_8_17_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961283_GSM3415842_8_14_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961284_GSM3415843_8_4_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961285_GSM3415844_8_11_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961286_GSM3415845_8_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961287_GSM3415846_8_12_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961288_GSM3415847_8_20_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961289_GSM3415848_8_13_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961290_GSM3415849_8_10_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961291_GSM3415850_8_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961292_GSM3415851_12_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961293_GSM3415852_12_8_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961294_GSM3415853_12_7_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961295_GSM3415854_12_4_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961296_GSM3415855_12_9_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961297_GSM3415856_12_10_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961298_GSM3415857_12_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961299_GSM3415858_12_15_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961300_GSM3415859_12_12_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961301_GSM3415860_12_20_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961302_GSM3415861_12_13_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961303_GSM3415862_12_19_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961304_GSM3415863_12_17_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961305_GSM3415864_12_18_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961306_GSM3415865_12_14_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961307_GSM3415866_12_11_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961308_GSM3415867_12_16_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961309_GSM3415868_16_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961310_GSM3415869_16_5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961311_GSM3415870_16_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961312_GSM3415871_16_13_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961313_GSM3415872_16_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961314_GSM3415873_16_11_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961315_GSM3415874_16_12_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961316_GSM3415875_16_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961317_GSM3415876_16_9_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961318_GSM3415877_16_10_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961319_GSM3415878_16_7_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961320_GSM3415879_14_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961321_GSM3415880_14_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961322_GSM3415881_14_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961323_GSM3415882_14_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961324_GSM3415883_15_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961325_GSM3415884_15_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961326_GSM3415885_15_3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961327_GSM3415886_15_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961328_GSM3415887_13_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961329_GSM3415888_13_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961330_GSM3415889_13_11_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961331_GSM3415890_13_13_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961332_GSM3415891_13_14_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961333_GSM3415892_13_18_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961334_GSM3415893_13_19_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961335_GSM3415894_13_20_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961336_GSM3415895_13_22_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961337_GSM3415896_WB1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961338_GSM3415897_WB2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961339_GSM3415898_WB5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961340_GSM3415899_WB6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961341_GSM3415900_WB7_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961342_GSM3415901_WB8_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961343_GSM3415902_D1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961344_GSM3415903_D2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961345_GSM3415904_D3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961346_GSM3415905_D4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961347_GSM3415906_D5_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961348_GSM3415907_D6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961349_GSM3415908_D7_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961350_GSM3415909_D9_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961351_GSM3415910_D10_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961352_GSM3415911_D11_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961353_GSM3415912_D8_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961354_GSM3415913_E3_rep1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961355_GSM3415914_E3_rep2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961356_GSM3415915_E3_rep3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961357_GSM3415916_16_5_rep1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961358_GSM3415917_16_5_rep2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/SRR7961359_GSM3415918_16_5_rep3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
