--- a/.gitignore
+++ b/.gitignore
@@ -500,3 +500,4 @@ mosdepth_outputs/SRR7961356_GSM3415915_E3_rep3_Homo_sapiens_RNA-Seq_Aligned.out.
 mosdepth_outputs/SRR7961357_GSM3415916_16_5_rep1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 mosdepth_outputs/SRR7961358_GSM3415917_16_5_rep2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 mosdepth_outputs/SRR7961359_GSM3415918_16_5_rep3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+metadata_GEO_GSE120795.txt
