--- a/.gitignore
+++ b/.gitignore
@@ -501,3 +501,11 @@ mosdepth_outputs/SRR7961357_GSM3415916_16_5_rep1_Homo_sapiens_RNA-Seq_Aligned.ou
 mosdepth_outputs/SRR7961358_GSM3415917_16_5_rep2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 mosdepth_outputs/SRR7961359_GSM3415918_16_5_rep3_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 metadata_GEO_GSE120795.txt
+THRA_isoform_Expression_Coverage/Heatmap_methods_comparison.png
+THRA_isoform_Expression_Coverage/Heatmap_THRA1vsA2_AUT_AUT_bedtools.png
+THRA_isoform_Expression_Coverage/Heatmap_THRA1vsA2_AUT_AUT_mosdepth.png
+THRA_isoform_Expression_Coverage/Heatmap_THRA1vsA2_bedtools.png
+THRA_isoform_Expression_Coverage/Heatmap_THRA1vsA2_mosdepth.png
+THRA_isoform_Expression_Coverage/Read_counts_9a_tool_comparison.png
+THRA_isoform_Expression_Coverage/Read_counts_9b_tool_comparison.png
+THRA_isoform_Expression_Coverage_GEO_GSE120795.html
