--- a/.gitignore
+++ b/.gitignore
@@ -511,3 +511,4 @@ THRA_isoform_Expression_Coverage/Read_counts_9b_tool_comparison.png
 THRA_isoform_Expression_Coverage_GEO_GSE120795.html
 THRA_isoform_Expression_Coverage/Read_counts_9a_mean_tool_comparison.png
 THRA_isoform_Expression_Coverage/Read_counts_9b_total_tool_comparison.png
+THRA_isoform_Expression_Coverage/Read_counts_9a_max_tool_comparison.png
