--- a/.gitignore
+++ b/.gitignore
@@ -512,3 +512,27 @@ THRA_isoform_Expression_Coverage_GEO_GSE120795.html
 THRA_isoform_Expression_Coverage/Read_counts_9a_mean_tool_comparison.png
 THRA_isoform_Expression_Coverage/Read_counts_9b_total_tool_comparison.png
 THRA_isoform_Expression_Coverage/Read_counts_9a_max_tool_comparison.png
+multiqc_report_alignment.html
+multiqc_report_alignment_data/mqc_fastqc_overrepresented_sequencesi_plot_1.txt
+multiqc_report_alignment_data/mqc_fastqc_per_base_n_content_plot_1.txt
+multiqc_report_alignment_data/mqc_fastqc_per_base_sequence_quality_plot_1.txt
+multiqc_report_alignment_data/mqc_fastqc_per_sequence_gc_content_plot_Counts.txt
+multiqc_report_alignment_data/mqc_fastqc_per_sequence_gc_content_plot_Percentages.txt
+multiqc_report_alignment_data/mqc_fastqc_per_sequence_quality_scores_plot_1.txt
+multiqc_report_alignment_data/mqc_fastqc_sequence_counts_plot_1.txt
+multiqc_report_alignment_data/mqc_fastqc_sequence_duplication_levels_plot_1.txt
+multiqc_report_alignment_data/mqc_fastqc_sequence_length_distribution_plot_1.txt
+multiqc_report_alignment_data/mqc_picard_rna_coverage_1.txt
+multiqc_report_alignment_data/mqc_picard_rnaseqmetrics_assignment_plot_1.txt
+multiqc_report_alignment_data/mqc_rseqc_junction_saturation_plot_All_Junctions.txt
+multiqc_report_alignment_data/mqc_rseqc_junction_saturation_plot_Known_Junctions.txt
+multiqc_report_alignment_data/mqc_rseqc_junction_saturation_plot_Novel_Junctions.txt
+multiqc_report_alignment_data/mqc_rseqc_read_dups_plot_1.txt
+multiqc_report_alignment_data/mqc_star_alignment_plot_1.txt
+multiqc_report_alignment_data/multiqc.log
+multiqc_report_alignment_data/multiqc_data.json
+multiqc_report_alignment_data/multiqc_fastqc.txt
+multiqc_report_alignment_data/multiqc_general_stats.txt
+multiqc_report_alignment_data/multiqc_picard_RnaSeqMetrics.txt
+multiqc_report_alignment_data/multiqc_sources.txt
+multiqc_report_alignment_data/multiqc_star.txt
