--- a/.gitignore
+++ b/.gitignore
@@ -536,3 +536,5 @@ multiqc_report_alignment_data/multiqc_general_stats.txt
 multiqc_report_alignment_data/multiqc_picard_RnaSeqMetrics.txt
 multiqc_report_alignment_data/multiqc_sources.txt
 multiqc_report_alignment_data/multiqc_star.txt
+GEO_GSE120795.Rproj
+GEO_GSE120795.Rproj
