--- a/.gitignore
+++ b/.gitignore
@@ -538,3 +538,4 @@ multiqc_report_alignment_data/multiqc_sources.txt
 multiqc_report_alignment_data/multiqc_star.txt
 GEO_GSE120795.Rproj
 GEO_GSE120795.Rproj
+THRA_isoform_Expression_Coverage/Heatmap_THRA1vsA2_mosdepth_percentages.png
