Updated the R code to graph a boxplot of the THRA1 expression, showing the variability between replicates

--- a/.gitignore
+++ b/.gitignore
@@ -540,3 +540,4 @@ GEO_GSE120795.Rproj
 GEO_GSE120795.Rproj
 THRA_isoform_Expression_Coverage/Heatmap_THRA1vsA2_mosdepth_percentages.png
 THRA_isoform_Expression_Coverage/THRA1vsA2_mosdepth_percentages.png
+THRA_isoform_Expression_Coverage/THRA1vsA2_mosdepth_percentages_boxplot.png
