Updated DESeq2 protocol
plots are now saved in .png rather than .pdf

--- a/.gitignore
+++ b/.gitignore
@@ -568,3 +568,29 @@ PCA_single_outputs/PCA_Uterus (myometrium).pdf
 PCA_single_outputs/PCA_Whole blood nuclear cells.pdf
 PCA_single_samples.pdf
 PCA_total.pdf
+PCA_single_outputs/PCA_Adrenal gland.png
+PCA_single_outputs/PCA_Bladder.png
+PCA_single_outputs/PCA_Brain (mixed white and gray matter).png
+PCA_single_outputs/PCA_CD138+ enriched bone marrow cells.png
+PCA_single_outputs/PCA_Cervix, endometrium.png
+PCA_single_outputs/PCA_Cervix.png
+PCA_single_outputs/PCA_Colon, epithelium.png
+PCA_single_outputs/PCA_Colon.png
+PCA_single_outputs/PCA_Esophagus.png
+PCA_single_outputs/PCA_Kidney.png
+PCA_single_outputs/PCA_Liver.png
+PCA_single_outputs/PCA_Lung.png
+PCA_single_outputs/PCA_Mammary gland.png
+PCA_single_outputs/PCA_Ovary.png
+PCA_single_outputs/PCA_Pancreas.png
+PCA_single_outputs/PCA_Prostate.png
+PCA_single_outputs/PCA_Skeletal muscle.png
+PCA_single_outputs/PCA_Skin.png
+PCA_single_outputs/PCA_Small intestine.png
+PCA_single_outputs/PCA_Stomach.png
+PCA_single_outputs/PCA_Thyroid gland.png
+PCA_single_outputs/PCA_Tonsil.png
+PCA_single_outputs/PCA_Uterus (myometrium).png
+PCA_single_outputs/PCA_Whole blood nuclear cells.png
+PCA_single_samples.png
+PCA_total.png
