--- a/.gitignore
+++ b/.gitignore
@@ -594,3 +594,21 @@ PCA_single_outputs/PCA_Uterus (myometrium).png
 PCA_single_outputs/PCA_Whole blood nuclear cells.png
 PCA_single_samples.png
 PCA_total.png
+bedtools_outputs/Outliers/SRR7961195_GSM3415754_K_1_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+bedtools_outputs/Outliers/SRR7961200_GSM3415759_K_6_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+bedtools_outputs/Outliers/SRR7961207_GSM3415766_Li_1_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+bedtools_outputs/Outliers/SRR7961236_GSM3415795_E_6_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+bedtools_outputs/Outliers/SRR7961242_GSM3415801_S_6_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+bedtools_outputs/Outliers/SRR7961246_GSM3415805_1_2_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+bedtools_outputs/Outliers/SRR7961272_GSM3415831_4_17_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+bedtools_outputs/Outliers/SRR7961298_GSM3415857_12_6_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+bedtools_outputs/Outliers/SRR7961327_GSM3415886_15_4_Homo_sapiens_RNA-Seq_Aligned.out.bedtools.txt
+mosdepth_outputs/Outliers/SRR7961195_GSM3415754_K_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/Outliers/SRR7961200_GSM3415759_K_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/Outliers/SRR7961207_GSM3415766_Li_1_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/Outliers/SRR7961236_GSM3415795_E_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/Outliers/SRR7961242_GSM3415801_S_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/Outliers/SRR7961246_GSM3415805_1_2_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/Outliers/SRR7961272_GSM3415831_4_17_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/Outliers/SRR7961298_GSM3415857_12_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+mosdepth_outputs/Outliers/SRR7961327_GSM3415886_15_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
