--- a/.gitignore
+++ b/.gitignore
@@ -612,3 +612,4 @@ mosdepth_outputs/Outliers/SRR7961246_GSM3415805_1_2_Homo_sapiens_RNA-Seq_Aligned
 mosdepth_outputs/Outliers/SRR7961272_GSM3415831_4_17_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 mosdepth_outputs/Outliers/SRR7961298_GSM3415857_12_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 mosdepth_outputs/Outliers/SRR7961327_GSM3415886_15_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
+GEO_GSE120795.Rproj
