--- a/.gitignore
+++ b/.gitignore
@@ -613,3 +613,5 @@ mosdepth_outputs/Outliers/SRR7961272_GSM3415831_4_17_Homo_sapiens_RNA-Seq_Aligne
 mosdepth_outputs/Outliers/SRR7961298_GSM3415857_12_6_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 mosdepth_outputs/Outliers/SRR7961327_GSM3415886_15_4_Homo_sapiens_RNA-Seq_Aligned.out.regions.bed
 GEO_GSE120795.Rproj
+README.md
+GEO_GSE120795.Rproj
